--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-SQLAlchemy==3.0.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+PyMySQL==1.0.3
 python-dotenv==1.0.0
 SQLAlchemy==2.0.16
 typing_extensions==4.6.3
