--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
+bcrypt==4.0.1
 blinker==1.6.2
 Cerberus==1.3.4
 click==8.1.3
 Flask==2.3.2
+Flask-JWT-Extended==4.5.2
 Flask-SQLAlchemy==3.0.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+PyJWT==2.7.0
 PyMySQL==1.0.3
 python-dotenv==1.0.0
 SQLAlchemy==2.0.16
