--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ click==8.1.3
 Flask==2.3.2
 Flask-JWT-Extended==4.5.2
 Flask-SQLAlchemy==3.0.3
+greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mysqlclient==2.1.1
 PyJWT==2.7.0
 PyMySQL==1.0.3
 python-dotenv==1.0.0
